[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.4, 1.0, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "SCORE: 0"

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = 30.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
text = "HI: 0"

[node name="WaveLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1.0, 1.0, 1.0, 0.8)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
text = "WAVE 1"

[node name="SiloLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.4, 0.7, 1.0, 1)
theme_override_font_sizes/font_size = 13
text = "SILOS: 6"

[node name="WarningVignette" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0.1)
